--- a/index.html
+++ b/index.html
@@ -268,6 +268,11 @@
                               Ella es <b>Diomy Carolina de 11°1</b> una estudiante de nuestra institucion educativa HDM la cual su proyecto tecnologico consta sobre explicarnos las fases del proyecto tecnologico incluso de manera teorica, grafica y practica algo de suma importancia y muestra como todos los estudiantes de HDM pasan por este proceso a la hora de realizar sus talleres.<br>
                               <video src="ASSETS/VIDEOS/VID1GRADO11.mp4" controls poster="ASSETS/IMAGES/FASES.webp" width="315px" height="220px"></video><br> 
                                     </p> <br>
+                                    <p class="text-main">
+                                      <h3 class="text-primary">Paletas</h3>
+                                      Ellas son <b>Nicole romero y Maryelis Garcia de 11°2</b> unas estudiante de nuestra institucion educativa HDM la cual su proyecto tecnologico consta sobre explicarnos las fases del proyecto tecnologico con un diseño bastante agradable a la vista y con colores colocados estrategicamente para el aprendizaje HDM fomentando el emprendimiento.<br>
+                                      <video src="ASSETS/VIDEOS/VID2GRADO11.mp4" controls poster="ASSETS/IMAGES/paletas.webp" width="315px" height="220px"></video><br> 
+                                            </p> <br>
 
         </div>
                 <div class="col-sm-3 container-aside d-none d-sm-block">
